# argot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STABILITY.md  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release-plz.yml
argot-cmd-derive/: Cargo.toml  README.md
argot-cmd-derive/argot-derive/: README.md
argot-cmd-derive/src/: lib.rs
argot-derive/: Cargo.toml
argot-derive/src/: lib.rs
examples/: deploy_tool.rs  derive_example.rs  git_like.rs  mcp_server.rs
scripts/: bump-version.sh
src/: lib.rs
src/cli/: mod.rs
src/middleware/: mod.rs
src/model/: argument.rs  command.rs  example.rs  flag.rs  mod.rs
src/parser/: mod.rs  tokenizer.rs
src/query/: mod.rs
src/render/: mod.rs
src/resolver/: mod.rs
src/transport/: mod.rs
tests/: derive_test.rs  integration_test.rs
