[package]
name = "argot"
version = "0.1.0"
edition = "2021"
description = "An agent-first command interface framework for Rust"
license = "MIT"
repository = "https://github.com/platinummonkey/argot"
homepage = "https://github.com/platinummonkey/argot"
documentation = "https://docs.rs/argot"
readme = "README.md"
keywords = ["cli", "agent", "mcp", "commands", "automation"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
default = []
mcp = []

[dev-dependencies]
