[package]
name = "argot-cmd-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Derive macros for the argot command framework"
readme = "README.md"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
