[package]
name = "argot-derive"
version.workspace = true
edition = "2021"
description = "Derive macros for the argot command framework"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
